specs/001-typescript-to-zig-native/examples/valid/export-default-helper.ts
export default function ignoredName(value: int): int {
  return value + value;
}
