specs/001-typescript-to-zig-native/examples/invalid/import-cycle-b.ts
import a from "./import-cycle-a.ts";

export default function b(value: int): int {
  return value;
}
